--- a/index.html
+++ b/index.html
@@ -1,7 +1,131 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>web_assign1</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+	<title>10302文學批評</title>
+	
+	</head>
+	<body >
+		<h1>課程：文學批評</h1>
+		<hr size="5" align="left" noshade width="90%" color="#008080">
+		<table border="1">
+		<tr>
+			<th rowspan="1" colspan="3">學年/學期<br> Academic Year/Semester</font color></th>
+				<td colspan="3">103 學年 第 2 學期</td>
+		</tr>
+
+		<tr >
+			<th rowspan="2" colspan="3">課程名稱<br>Course Name</font color></th>
+				<td colspan="3">(中 Ch.)文學批評</td>
+		</tr>
+
+		<tr>
+				<td colspan="3">(英 Eng.)Literary Criticism</td>
+		</tr>		
+		
+
+		<tr>
+			<th rowspan="1" colspan="3">授課教師<br>Instructor</th>
+				<td colspan="3">陳芳明</td>
+
+		</tr>
+
+		<tr>
+			<th rowspan="1" colspan="2">修別<br>Type of Credit</th>
+				<td colspan="1">群修</td>
+			<th rowspan="1" colspan="2">學分<br>No. of Credits</th>
+				<td colspan="1">2.0</td>
+			
+		</tr>
+		<tr>
+			<th colspan="6">備註 Note</th>
+		</tr>
+
+		<tr>
+			<td colspan="6">N/A</td>
+		</tr>
+
+		<tr>
+			<th colspan="6">課程目標 Course Objectives</th>
+		</tr>
+
+		<tr>
+			<td colspan="6">一、增進學生對於文藝理論及文學批評的認識。<br>
+							二、培養學生閱讀與欣賞文學作品的能力。 <br>
+							三、訓練學生獨立思辯及流暢表達的能力。 <br>
+							四、透過文學理論及作品的研讀瞭解台灣文學的發展。</td>
+		</tr>
+
+		<tr>
+			<th colspan="6">課程大綱 Course Description</th>
+		</tr>
+
+		<tr>
+			<td colspan="6">第一章 閱讀:文學批評的起點<br> 
+							第二章 現代主義的轉折 <br>
+							第三章 台灣現代主義的特質 <br>
+							第四章 新批評與現代主義運動 <br>
+							第五章 後現代主義與台灣 <br>
+							第六章 索緒爾的現代語言學 <br>
+							第七章 結構主義到後結構主義 <br>
+							第八章 後現代主義的特徵</td>
+		</tr>
+
+		<tr>
+			<th colspan="6">上課進度 Class Schedule</th>
+		</tr>
+
+		<tr>
+			<td colspan="6">每一章約講授二~三週</td>
+		</tr>
+
+		<tr>
+			<th colspan="6">課程要求/評分標準 Course requirements/Grading standards</th>
+		</tr>
+
+		<tr>
+			<td colspan="6">一、平時成績：課堂參與、出席情況。<br> 
+							二、期末個人書面報告。 <br>
+							三、期末筆試。</td>
+		</tr>		
+
+		<tr>
+			<th colspan="6">參考書目 Textbook & references<br><font color="red">（為維護智慧財產權，請務必使用正版書籍）</font></th>
+		</tr>
+
+		<tr>
+			<td colspan="6">Eagleton Terry, Literary Theory: An Introduction, London: Blackwell, 1983 <br>(吳新發譯，《文學理論導讀》，台北:書林，1993)</td>
+		</tr>
+
+		<tr>
+			<th colspan="6">本課程附件 Course attachments</th>
+		</tr>
+
+		<tr>
+			<td colspan="6">N/A</td>
+		</tr>
+
+
+
+
+
+		<tr>
+			<th colspan="3">核心能力分析圖<br>Core Competence Analysis Chart</th>
+			<th colspan="3">授課方式比例圖<br>Teaching Approach Pie Chart</th>
+		</tr>
+		<tr>
+			<td colspan="3"><img src="http://ppt.cc/yDq~@.jpg" alt="核心能力分析圖" ><br>
+	    	能力項目說明：<br>
+	    		A.語文之分析與運用<br>B.文學鑑賞與批評<br>C.文藝創作與創意產發<br>D.邏輯思辨與價值認知<br>E.經典詮釋與跨文化視野</td>
+
+	    	<td colspan="3"><img src="http://ppt.cc/0H3B@.jpg" alt="授課方式比例圖"></td>
+	    </tr>
+
+	</table>
+	</aside>
+
+		<footer>
+			<a href="" target="_blank">form</a>
+
+		</footer>
+	</body>
 </html>
