--- a/form.html
+++ b/form.html
@@ -12,7 +12,10 @@
   <body>
   <h2>1.Your Name</h2>
 
+  <input type="text" id="name" value="a0">
+
   <h2>2.What is Your Gender?</h2>
+
 
   <p>
     <input type="radio" name="gender" id="male" value="b0"><label for="male"> Male</label><br>
@@ -21,6 +24,8 @@
 
 
   <h2>3.Birthday</h2>
+
+  <input type="text" id="birth" >
 
   <h2>4.Which Form of Transport do You Use?</h2>
   <span class="subtitle">(Choose as many as you like)</span>
@@ -72,10 +77,19 @@
 
   <h2>7.Your Phone</h2>
 
+  <input type="text" name="phone">
+
   <h2>8.Email Adress</h2>
 
+  <input type="text" name="email">
+
   <h2>9.Personal Website</h2>
-    http://
+    <input type="text" name="email"http://>
 
 </body>
-submit
+
+
+    <footer>
+      <a href="http://elenatu.github.io/web_assign1/thankyou.html" target="_blank">Submit</a>
+
+    </footer>
