--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
   <body>
   <h2>1.Your Name</h2>
 
-  <input type="text" id="name" value="a0">
+  <input type="text" id="name" >
 
   <h2>2.What is Your Gender?</h2>
 
@@ -25,7 +25,7 @@
 
   <h2>3.Birthday</h2>
 
-  <input type="text" id="birth" >
+  <input type="text" id="birth" placeholder="ex.1993/01/01">
 
   <h2>4.Which Form of Transport do You Use?</h2>
   <span class="subtitle">(Choose as many as you like)</span>
@@ -77,14 +77,17 @@
 
   <h2>7.Your Phone</h2>
 
-  <input type="text" name="phone">
+  <input type="text" name="phone" placeholder="ex.0922-123-456">
 
   <h2>8.Email Adress</h2>
 
-  <input type="text" name="email">
+
+  <input type="email" id="inpEmail" placeholder="Enter email">
 
   <h2>9.Personal Website</h2>
-    <input type="text" name="email"http://>
+
+    <input type="text" name="website" value="http://">
+ 
 
 </body>
 
