--- a/web_assign1.html
+++ b/web_assign1.html
@@ -67,7 +67,7 @@
 	    	<p>能力項目說明：<br>
 	    		A.語文之分析與運用<br>B.文學鑑賞與批評<br>C.文藝創作與創意產發<br>D.邏輯思辨與價值認知<br>E.經典詮釋與跨文化視野</p>
 
-		<h3>1.授課方式比例圖 Teaching Approach Pie Chart</h3>
+		<h3>授課方式比例圖 Teaching Approach Pie Chart</h3>
 			<img src="http://ppt.cc/0H3B@.jpg" alt="授課方式比例圖">
 	   
 
